--- a/sass/_explorer.scss
+++ b/sass/_explorer.scss
@@ -1,8 +1,9 @@
+@import "box-shadow";
 
 .explorer {
 
     text-align: center;
-    margin: 2rem;
+    
   
    & h2 {
     font-size: 1.5rem;
@@ -21,9 +22,9 @@
     transition: transform 200ms;
     margin-top: 1rem;
     cursor: pointer;
-    box-shadow: 2px 1px 8px -3px #7e7e7e;
     background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
     font-size: 1rem;
+    @include base-shadow;
   }
   & button:hover {
     transform: scale(1.02);
