--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,11 @@
 @import "base";
 @import "header";
-@import "explorer";
 @import "city";
+@import "explorer";
+@import "tuto";
+@import "box-shadow";
+
+
+
 
 
