--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,9 @@
-@import "base";
-@import "header";
-@import "city";
-@import "explorer";
-@import "tuto";
-@import "box-shadow";
-
+@use "base";
+@use "header";
+@use "city";
+@use "explorer";
+@use "tuto";
+@use "box-shadow";
 
 
 
