--- a/sass/_tuto.scss
+++ b/sass/_tuto.scss
@@ -1,5 +1,5 @@
-@import "zoom";
-@import "box-shadow";
+@use  "zoom";
+@use  "box-shadow";
 
 
 .tuto {
@@ -18,9 +18,9 @@
     padding: 1.5rem 2rem;
     flex-grow: 1;
     border-radius: 1rem;
-    @include base-shadow;
+    @include box-shadow.base-shadow;
      &:hover {
-        @include zoom;
+        @include zoom.transform-zoom;
      }
     }
    
