--- a/sass/_explorer.scss
+++ b/sass/_explorer.scss
@@ -1,12 +1,10 @@
-
-@use "box-shadow";
+@use "mixins";
+@use "colors";
 
 .explorer {
-
-    text-align: center;
-    
-  
-   & h2 {
+  text-align: center;
+  margin: 2rem;
+  & h2 {
     font-size: 1.5rem;
     margin: 1rem;
   }
@@ -14,23 +12,44 @@
     font-size: 1rem;
   }
   & button {
-    color: white;
-    font-weight: 300;
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    transition: transform 200ms;
-    margin-top: 1rem;
-    cursor: pointer;
-    background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+    @include mixins.base-button;
     font-size: 1rem;
-    @include box-shadow.base-shadow;
   }
-  & button:hover {
-    transform: scale(1.02);
-    opacity: 0.9;
-  }
-
 }
-    
+
+.loader {
+  $animation-duration: 1s;
+  $animation-count: 3;
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: #ffffff;
+  height: 100vh;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.9;
+  animation: disappear 200ms $animation-duration * $animation-count forwards;
+  transform-origin: top;
+  &::after {
+    content: "";
+    height: 100px;
+    width: 100px;
+    border-right: 5px solid transparent;
+    border-top: 5px solid colors.$purple;
+    border-radius: 50%;
+    animation: spin $animation-duration ease-in-out;
+    animation-iteration-count: $animation-count;
+  }
+}
+
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
