--- a/sass/_explorer.scss
+++ b/sass/_explorer.scss
@@ -3,7 +3,10 @@
 
 .explorer {
   text-align: center;
-  margin: 2rem;
+  padding-bottom: 3rem;
+  padding-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #fafafa;
   & h2 {
     font-size: 1.5rem;
     margin: 1rem;
