--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@ body {
 
 main {
   padding: 0 7rem;
+  background-color: white;
 }
 @media (max-width: 1000px) {
   main {
-    padding: 0 1rem;
+    padding: 0;
   }
 }
 
@@ -63,7 +64,10 @@ header {
 
 .explorer {
   text-align: center;
-  margin: 2rem;
+  padding-bottom: 3rem;
+  padding-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #fafafa;
 }
 .explorer h2 {
   font-size: 1.5rem;
@@ -126,7 +130,7 @@ header {
 }
 .tuto {
   counter-reset: steps;
-  margin-bottom: 2rem;
+  padding: 2rem 1rem;
 }
 .tuto ol {
   display: flex;
@@ -135,6 +139,7 @@ header {
 @media (max-width: 1000px) {
   .tuto ol {
     flex-direction: column;
+    padding-left: 1rem;
   }
 }
 .tuto li {
@@ -178,7 +183,10 @@ header {
 
 #homepage .menus {
   background-color: #f6f6f6;
-  margin-bottom: 2rem;
+  padding: 2rem 1rem;
+}
+#homepage .menus .titreresto {
+  margin-bottom: 1rem;
 }
 #homepage .menus .menus__cards {
   display: grid;
@@ -206,7 +214,7 @@ header {
   top: 1rem;
 }
 #homepage .menus .card__image {
-  height: 15rem;
+  height: 14rem;
   border-radius: 1rem 1rem 0 0;
   background-size: cover;
   background-position: center;
@@ -273,9 +281,16 @@ header {
   opacity: 1;
   transform: translateY(-50%) scale(1.1);
 }
-#homepage .menus .card__description h3,
-#homepage .menus .card__description p {
-  padding: 0.3rem;
+#homepage .menus .card__description .titrecarte1 {
+  margin-top: 0;
+  margin-left: 1rem;
+  padding-top: 1rem;
+  margin-bottom: -1rem;
+}
+#homepage .menus .card__description .titrecarte2 {
+  margin-left: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 1.5rem;
 }
 
 footer {
@@ -328,7 +343,7 @@ body {
 #page-resto .banner img {
   display: block;
   width: 100%;
-  height: 70vh;
+  height: 35vh;
   object-fit: cover;
   object-position: center;
 }
@@ -487,7 +502,7 @@ body {
   }
 }
 #page-resto section.order {
-  height: 30vh;
+  height: 22vh;
   display: grid;
   place-items: center;
 }
