--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.img {
+  height: 35px;
+}
+
 main {
   padding: 0 7rem;
   background-color: white;
@@ -66,7 +70,7 @@ header {
   text-align: center;
   padding-bottom: 3rem;
   padding-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   background-color: #fafafa;
 }
 .explorer h2 {
@@ -475,6 +479,7 @@ body {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  font-size: 0.8rem;
 }
 #page-resto .menus .menus__category .menu-item .menu-item__check {
   display: grid;
