--- a/sass/_restaurant-1.scss
+++ b/sass/_restaurant-1.scss
@@ -105,6 +105,7 @@ body {
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+            font-size: .8rem;
           }
         }
         .menu-item__check {
