--- a/sass/_explorer.scss
+++ b/sass/_explorer.scss
@@ -13,7 +13,9 @@
   }
   & p {
     font-size: 1rem;
+    margin: 1rem;
   }
+
   & button {
     @include mixins.base-button;
     font-size: 1rem;
