--- a/sass/_maps.scss
+++ b/sass/_maps.scss
@@ -10,8 +10,9 @@
   border: none;
   background: #eaeaea;
   font-size: 1rem;
-  padding: 20px 5px 20px 5px;
+  padding: 18px 5px 18px 5px;
   margin-top: 5px;
   text-align: center;
   width: 150px;
+  font-family: "Roboto", sans-serif;
 }
